try to avoid chart scrollbar on Fx / 4K

--- a/public/stylesheets/analyse.css
+++ b/public/stylesheets/analyse.css
@@ -1448,6 +1448,7 @@ div.advice_summary .button {
 #movetimes_chart {
   height: 210px;
   background: linear-gradient(to bottom, rgba(255, 255, 255, 0) 0%, rgba(255, 255, 255, 0) 20%, rgba(128, 128, 128, 0.2) 50%, rgba(255, 255, 255, 0) 80%, rgba(255, 255, 255, 0) 100%);
+  overflow: hidden;
 }
 div.panel.computer_analysis {
   position: relative;
